# linkerd

./: .gitignore  Makefile  README.md  curl.http
.devcontainer/: Dockerfile  devcontainer.json  on-create.sh  post-start.sh
app/: .dockerignore  Cargo.toml  Dockerfile  depa.Dockerfile  depb.Dockerfile  docker-compose.yml  pickle.Dockerfile  signer.Dockerfile  words.Dockerfile
app/depa/: Cargo.toml  Dockerfile  build.rs
app/depa/src/: main.rs
app/depb/: Cargo.toml  Dockerfile
app/depb/keys/: pickle.key  pickle_public.key
app/depb/src/: main.rs
app/dill/: Cargo.toml  build.rs
app/dill/proto/dill/: dill.proto
app/pickle/: Cargo.toml  Dockerfile  Rocket.toml
app/pickle/src/: main.rs
app/rust/: Cargo.toml
app/rust/b3/: Cargo.toml
app/rust/b3/src/: lib.rs
app/rust/depa/: Cargo.toml
app/rust/depb/: Cargo.toml
app/rust/depb/src/: main.rs
app/rust/dill/: build.rs
app/rust/dill/proto/: dill.proto
app/rust/dill/src/: lib.rs
app/rust/pickle/: Cargo.toml  Rocket.toml
app/rust/pickle/src/: main.rs
app/rust/signer/: Cargo.toml
app/rust/signer/keys/: pickle_public_key.der
app/rust/signer/src/: main.rs
app/rust/words/: Cargo.toml
app/rust/words/src/: main.rs
app/src/: main.rs
deploy/app/: pickle.yaml  pickle_ingress.yaml  pickle_ns.yaml
deploy/fluentbit/: account.yaml  fluentbit-pod.yaml  fluentbit.yaml  loga-config.yaml  namespace.yaml  stdout-config.yaml
deploy/k3d/: k3d.yaml
deploy/ngsa-local/: ngsa-memory.yaml
deploy/ngsa-memory/: ngsa-memory.yaml
deploy/pickle-local/: pickle.yaml
deploy/traefik/: traefik_values.yaml
deploy/webv/: webv.yaml
deploy/webv-local/: webv.yaml
k3d/: Makefile  k3d.yaml
