[package]
name = "pickle_depa"
version = "0.1.0"
authors = ["Dan Massey <danmass@microsoft.com>"]
edition = "2018"

[dependencies]
prost = "0.8"
prost-types = "0.8"
names = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.5.2"

[build-dependencies]
tonic-build = "0.5.2"
