[package]
name = "pickle_depa"
version = "0.1.0"
authors = ["Dan Massey <danmass@microsoft.com>"]
edition = "2018"

[dependencies]
env_logger = "0.9.0"
futures = "0.3"
log = "0.4.14"
names = "0.11"
prost = "0.8"
prost-types = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.5.2"
tower = "0.4"

[build-dependencies]
tonic-build = "0.5.2"
