[package]
name = "pickle_depb"
version = "0.1.0"
authors = ["Dan Massey <danmass@microsoft.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
env_logger = "0.9.0"
log = "0.4.14"
openssl = "0.10"
prost = "0.8"
prost-types = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.5.2"

[build-dependencies]
tonic-build = "0.5.2"
