[package]
name = "pickle"
version = "0.1.0"
authors = ["Dan Massey <danmass@microsoft.com>"]
edition = "2018"

[dependencies]
prost = "0.8"
prost-types = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.5.2"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[build-dependencies]
tonic-build = "0.5.2"
