[package]
name = "pickle"
version = "0.1.0"
authors = ["Dan Massey <danmass@microsoft.com>"]
edition = "2018"

[dependencies]
b3 = { path = "../b3" }
dill = { path = "../dill" }
log = "0.4.14"
okapi = { version = "0.6.0-alpha-1", features = ["derive_json_schema"] }
once_cell = "1.5.2"
opentelemetry = { version = "0.16" }
prost = "0.8"
prost-types = "0.8"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_okapi = "0.7.0-alpha-1"
schemars = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.59"
tonic = "0.5.2"
tower = "0.4"
