[package]
name = "pickle_signer"
version = "0.1.0"
authors = ["Dan Massey <danmass@microsoft.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
dill = { path = "../dill" }
env_logger = "0.9.0"
futures = "0.3"
log = "0.4.14"
openssl = { version = "0.10", features = ["vendored"] }
prost = "0.8"
prost-types = "0.8"
rocket = "0.5.0-rc.1"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.5.2"
